--- a/Squash.Web/Client/Pages/Player.razor
+++ b/Squash.Web/Client/Pages/Player.razor
@@ -56,6 +56,9 @@
                 }
             </div>
     </div>
+    <div class="row">
+        <Squash.Web.Client.Components.PlayerPoints SelectedPlayer="@SelectedPlayer" NumberOfResults="5"/>
+    </div>
     </div>
     }
 
